--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #666666;
+  background: #989898;
 }
 
 .chair {
@@ -53,3 +53,10 @@ body {
   text-align: center;
   margin-top: 1rem;
 }
+
+canvas{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+/*TEST*/
